2023-07-22 Xi Ruoyao <xry111@xry111.site>
   * In mountvirtfs, create symlinks /dev/{fd,std{in,out,err}} and
     /dev/core (optional).

2023-07-16 Xi Ruoyao <xry111@xry111.site>
   * In udev, set SYSTEMD_LOG_TARGET=kmsg so systemd-udevd will correctly
     log messages.

2023-07-15 Xi Ruoyao <xry111@xry111.site>
   * Use /bin/udevadm instead of /sbin/udevadm.

2022-09-30 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Mount /dev/shm as a tmpfs.

2022-07-23 Thomas Trepl <thomas@linuxfromscratch.org>
   * Mark an raid array clean when root (/) has been remounted
     r/o when system goes down. Otherwise, array does remain
     always 'dirty', causing a resync at next boot.

2022-03-24 Pierre Labastie <pierre dot labastie at neuf dot fr>
   * New semantics for K and S scripts:
     - S scripts only started if not already marked S in the previous runlevel
     - K scripts only started if not already marked K in the previous runlevel
     - remove the convention of running S scripts ith "stop" in rl 0/6
2021-06-08 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * When shutting down the network, ignore invalid interfaces
     or interfaces that are not UP.

2021-06-02 Thomas Trepl <thomas@linuxfromscratch.org>
   * Prevent sendsignals from killing an active mdmon

2021-04-28 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Make check_signal more robust.
   * Use a better methog for killproc to remove a dead pid file.
   * Clarify what signals killproc accepts.
   * Thanks to input and discussion from Scott Andrews.

2021-02-01 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Tweak mountfs to properly exit when an error is found.

2021-01-13 Xi Ruoyao <xry111@mengyan1223.wang>
   * Use /run instead of deprecated /var/run

2020-10-02 DJ Lucas <dj@linuxfromscratch.org>
   * make $local_fs a Should-Stop dependency of swap to allow clean install

2020-08-02 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Fix a minor display problem in checkfs
